# autONMT

./: .gitignore  Makefile  README.md  setup.cfg
src/: autonmt.py  prepare.py
src/autonmt/: __init__.py  common.py  configs.py  pipeline.py  steps.py  util.py
tests/pipelines/: new_format_pipeline.yml
