[metadata]
name = autONMT-mehdidou99
version = 0.0.3
author = Mehdi Benharrats
author_email = mehdibenharrats@yahoo.fr
description = A simple tool for configuring OpenNMT-tf pipelines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mehdidou99/autONMT
project_urls =
    Bug Tracker = https://github.com/mehdidou99/autONMT/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
scripts = 
    src/prepare
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
